--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-    <a><img src="foto/WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
+    <a><img src="WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
     <ul class="nav">
-    <li><a href="http://127.0.0.1:5500/estegrem.html">Домой</a></li>
+    <li><a href="estegrem.html">Домой</a></li>
     <li><a href="price.html">Прайсы</a></li>
     <li><a href="faq.html">Вопросы</a></li> 
     </ul>
