--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты</title>
     <link rel="stylesheet" href="contact.css">
-    <link rel="icon" type="image/png" href="foto/WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
+    <link rel="icon" type="image/png" href="WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
 </head>
 <body>
     <header>
-    <a><img src="foto/WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
+    <a><img src="WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
     <ul class="nav">
     <li><a href="http://127.0.0.1:5500/estegrem.html">Домой</a></li>
     <li><a href="price.html">Прайсы</a></li>
@@ -25,15 +25,15 @@
 
     <div class="icon">
         <div class="contact-item">
-            <a href="https://wa.me/77076030137?" target="_blank"><img src="foto/WhatsApp.webp"></a>
+            <a href="https://wa.me/77076030137?" target="_blank"><img src="WhatsApp.webp"></a>
             <p>WhatsApp</p>
         </div>
         <div class="contact-item">
-            <a href="https://www.instagram.com/estegrante" target="_blank"><img src="foto/Instagram logo.webp"></a>
+            <a href="https://www.instagram.com/estegrante" target="_blank"><img src="Instagram logo.webp"></a>
             <p>Instagram</p>
         </div>
         <div class="contact-item">
-            <a href="https://t.me/vusala_rahimli" target="_blank"><img src="foto/Telegram_logo.webp"></a>
+            <a href="https://t.me/vusala_rahimli" target="_blank"><img src="Telegram_logo.webp"></a>
             <p>Telegram</p>
         </div>
     </div>
