--- a/estegrem.html
+++ b/estegrem.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Este Grante</title>
     <link rel="stylesheet" href="es.css">
-    <link rel="icon" type="image/png" href="foto/WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600display=swap" rel="stylesheet">
     <meta property="og:title" content="Este Grante – Косметология Актау">
     <meta property="og:description" content="Подтянутая и свежая кожа без хирурга. Аппаратная косметология в Актау.">
-    <meta property="og:image" content="foto/WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
+    <meta property="og:image" content="WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
     <meta property="og:url" content="https://твой-сайт.kz">
 
 </head>
