--- a/price.html
+++ b/price.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Прайсы</title>
     <link rel="stylesheet" href="p.css">
-    <link rel="icon" type="image/png" href="foto/WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
+    <link rel="icon" type="image/png" href="WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
 
 </head>
 <body>
     <header>
-    <a><img src="foto/WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
+    <a><img src="WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
     <ul class="nav">
         <li><a href="http://127.0.0.1:5500/estegrem.html">Домой</a></li>
     <li><a href="http://127.0.0.1:5500/contact.html">Контакты</a></li>
