--- a/estegrem.html
+++ b/estegrem.html
@@ -6,7 +6,7 @@
     <title>Este Grante</title>
     <link rel="stylesheet" href="es.css">
     <link rel="icon" type="image/png" href="WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <meta property="og:title" content="Este Grante – Косметология Актау">
     <meta property="og:description" content="Подтянутая и свежая кожа без хирурга. Аппаратная косметология в Актау.">
     <meta property="og:image" content="WhatsApp Image 2025-04-22 at 20.19.22.jpeg">
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-    <a><img src="foto/WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
+    <a><img src="WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
     <ul class="nav">
     <li><a href="http://127.0.0.1:5500/contact.html">Контакты</a></li>
     <li><a href="price.html">Прайсы</a></li>
