--- a/price.html
+++ b/price.html
@@ -12,8 +12,8 @@
     <header>
     <a><img src="WhatsApp Image 2025-04-22 at 20.19.22.jpeg" class="ava"></a>
     <ul class="nav">
-        <li><a href="http://127.0.0.1:5500/estegrem.html">Домой</a></li>
-    <li><a href="http://127.0.0.1:5500/contact.html">Контакты</a></li>
+        <li><a href="estegrem.html">Домой</a></li>
+    <li><a href="contact.html">Контакты</a></li>
     <li><a href="faq.html">Вопросы</a></li> 
     </ul>
     </header>
